--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.8.0",
     "next": "12.2.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-particles-js": "^3.6.0",
-    "react-tsparticles": "^2.1.3"
+    "react-tsparticles": "^2.1.3",
+    "tsparticles": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
